--- a/_includes/about.html
+++ b/_includes/about.html
@@ -11,7 +11,7 @@
                 IWTO is a one-day workshop, which will consist of two sessions followed by a discussion panel. Each session will include a keynote and presentations of accepted papers.
                 </p>  
                 <br>
-                IMPORTANT DATES
+                <b>IMPORTANT DATES</b>
                 <br>
                 Abstract Submission Deadline: TBA
                 <br>
